Fix horizontal scroll in header

--- a/src/style/scss/cmps/AppHeader.scss
+++ b/src/style/scss/cmps/AppHeader.scss
@@ -5,11 +5,7 @@
     z-index: 1;
     background-color: white;
     display: flex;
-    width: 100vw;
-
-
     // max-width: 1280px;
-
 }
 
 .expanded-header {
